--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,14 @@
-<header class="header">
-	
+<header class="header clearfix">
+	<div class="wp">
+		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}"><img alt="" src="{{ "/images/user_img.png" | prepend: site.baseurl }}"></a>
+		<div class="des fl ml20 mt15">
+			<h1>Beehoo's Blog</h1>
+			<p>燃烧自己，温暖自己</p>
+		</div><!--/des-->
+		<ul class="nav fr clearfix">
+			<li><a href="{{ "/" | prepend:site.baseurl }}">首页</a></li>
+			<li><a href="javascript:;">实验室</a></li>
+			<li><a href="javascript:;">关于Beehoo</a></li>
+		</ul><!--/nav-->
+	</div><!--/wp-->
 </header>
