--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="header clearfix">
-	<div class="wp">
+<header class="header">
+	<div class="wp clearfix">
 		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}"><img alt="" src="{{ "/images/user_img.png" | prepend: site.baseurl }}"></a>
 		<div class="des fl ml20 mt10">
 			<h1>Beehoo's Blog</h1>
