修改了博客的名称

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="wp clearfix">
 		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}"><img alt="" src="{{ "/images/user_img.png" | prepend: site.baseurl }}"></a>
 		<div class="des fl ml20 mt10">
-			<h1>Beehoo's Blog</h1>
+			<h1>Beehoo's tail</h1>
 			<p>燃烧自己，温暖自己</p>
 		</div><!--/des-->
 		<ul class="nav fr clearfix">
