博客风格改成清新绿，更换博客logo,添加博客icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,4 +4,5 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/base.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
+	<link rel="shortcut icon" href="{{ "/images/favicon.ico" | prepend: site.baseurl }}">
 </head>
