--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,11 @@
 <header class="header">
 	<div class="wp clearfix">
-		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}"><img alt="" src="{{ "/images/user_img.png" | prepend: site.baseurl }}"></a>
-		<div class="des fl ml20 mt10">
+		<!--<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}"><img alt="" src="{{ "/images/user_img.png" | prepend: site.baseurl }}"></a>-->
+		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}">Beehoo's tail</a>
+		<!--<div class="des fl ml20 mt10">
 			<h1>Beehoo's tail</h1>
 			<p>燃烧自己，温暖自己</p>
-		</div><!--/des-->
+		</div><-->
 		<ul class="nav fr clearfix">
 			<li><a href="{{ "/" | prepend:site.baseurl }}">首页</a></li>
 			<li><a href="javascript:;">实验室</a></li>
