--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/base.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
-	<link rel="shortcut icon" href="{{ "/images/favicon.ico" | prepend: site.baseurl }}">
+	<link rel="shortcut icon" href="http://beehoo.github.io/images/favicon.ico">
 </head>
