--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer class="footer">
+<div class="footer">
 	<p class="tc">Copyright © 2014 <a href="http://beehoo.github.io">Beehoo's Tail</a>. All Rights Reserved.</p>
-</footer>
+</div>
 
 <script src="{{ "/js/jquery-1.11.1.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
