--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
-<header class="header">
-	<div class="wp clearfix">
+<div class="header">
+	<div class="hd_wp clearfix">
 		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}">Beehoo's Tail</a>
 		<ul class="nav fr clearfix">
 			<li><a href="{{ "/" | prepend:site.baseurl }}">首页</a></li>
 			<li><a href="javascript:;">实验室</a></li>
 			<li><a href="javascript:;">关于Beehoo</a></li>
 		</ul><!--/nav-->
-	</div><!--/wp-->
-</header>
+	</div><!--/hd_wp-->
+</div>
