Jquery版本降回1.8，不对IE9以下版本做兼容。优化部分体验

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<div class="footer">
+<footer class="footer">
 	<p class="tc">Copyright © 2014 <a href="http://beehoo.github.io">Beehoo's Tail</a>. All Rights Reserved.</p>
-</div>
+</footer>
 
-<script src="{{ "/js/jquery-1.11.1.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery-1.8.3.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
