--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
 	<div class="hd_wp clearfix">
 		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}">Beehoo's Tail</a>
 		<ul class="nav fr clearfix">
@@ -7,4 +7,4 @@
 			<li><a href="javascript:;">关于Beehoo</a></li>
 		</ul><!--/nav-->
 	</div><!--/hd_wp-->
-</div>
+</header>
