--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
 	<meta name="description" content="{{ site.description }}">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/base.min.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/css/csshake.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
 	<link rel="shortcut icon" href="http://beehoo.github.io/images/favicon.ico">
 </head>
