--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="{{ site.description }}">
+	<meta name="renderer" content="webkit">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/base.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/csshake.min.css" | prepend: site.baseurl }}">
