--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}">Beehoo's Tail</a>
 		<ul class="nav fr clearfix">
 			<li><a href="{{ "/" | prepend:site.baseurl }}">首页</a></li>
-			<li><a href="javascript:;">实验室</a></li>
+			<li><a href="javascript:;">尾巴集</a></li>
 			<li><a href="javascript:;">关于Beehoo</a></li>
 		</ul><!--/nav-->
 	</div><!--/hd_wp-->
