新加了提示页面和彩蛋2号，修正了一些问题

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
 	<meta name="description" content="{{ site.description }}">
 	<meta name="renderer" content="webkit">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-	<link rel="stylesheet" href="{{ "/css/base.min.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="{{ "/css/csshake.min.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ '/css/base.min.css' | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ '/css/csshake.min.css' | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ '/css/style.css' | prepend: site.baseurl }}">
 	<link rel="shortcut icon" href="http://beehoo.github.io/images/favicon.ico">
 </head>
