--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header class="header">
 	<div class="hd_wp clearfix">
-		<a class="logo fl" href="{{ "/" | prepend:site.baseurl }}">Beehoo's Tail</a>
+		<a class="logo fl" href="{{ '/' | prepend:site.baseurl }}">Beehoo's Tail</a>
 		<ul class="nav fr clearfix">
-			<li><a href="{{ "/" | prepend:site.baseurl }}">首页</a></li>
-			<li><a href="javascript:;">尾巴集</a></li>
-			<li><a href="javascript:;">关于Beehoo</a></li>
+			<li><a href="{{ '/' | prepend:site.baseurl }}">首页</a></li>
+			<li><a href="{{ '/prompt.html' | prepend:site.baseurl }}">尾巴集</a></li>
+			<li><a href="{{ '/prompt.html' | prepend:site.baseurl }}">关于Beehoo</a></li>
 		</ul><!--/nav-->
 	</div><!--/hd_wp-->
 </header>
