--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,5 @@
 	<p class="tc">Copyright © 2014 <a href="http://beehoo.github.io">Beehoo's Tail</a>. All Rights Reserved.</p>
 </footer>
 
-<script src="{{ "/js/jquery-1.8.3.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+<script src="{{ '/js/jquery-1.8.3.min.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/js/main.js' | prepend: site.baseurl }}"></script>
