--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 		</div><!--/post_share-->
 		
 		<!-- 多说评论框 start -->
-		<div class="ds-thread" data-thread-key="postCont" data-title="{{ page.title }}" data-url="{{ site.baseurl }}{{ post.url }}"></div>
+		<div class="ds-thread" data-thread-key="{{ post.id }}" data-title="{{ post.title }}" data-url="{{ site.baseurl }}{{ post.url }}"></div>
 		<!-- 多说评论框 end -->
 		<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 		<script type="text/javascript">
