--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,11 @@ layout: default
 		<article id="{{ page.id }}" class="post_content">
 			{{ content }}
 		</article>
-		<div class="post_share clearfix mt50">
+		<div class="blog-prev-next clearfix">
+			<p class="fl">上一篇：<a href="{{page.previous.url}}">{{page.previous.title}}</a></p>
+			<p class="fr">下一篇：<a href="{{page.next.url}}">{{page.next.title}}</a></p>
+		</div><!--/blog-prev-next-->	
+		<div class="post_share clearfix">
 			<div class="bdsharebuttonbox fr"><span class="share_to fl">分享到：</span><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
 			<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 		</div><!--/post_share-->
