加入统计代码

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,3 +4,8 @@
 
 <script src="{{ '/js/jquery-1.8.3.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/js/main.js' | prepend: site.baseurl }}"></script>
+
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7569c58a939d77445b6cd07960c32132' type='text/javascript'%3E%3C/script%3E"));
+</script>
