新增了一篇日志，添加了对手机浏览的临时性兼容

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="{{ site.description }}">
 	<meta name="renderer" content="webkit">
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ '/css/base.min.css' | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ '/css/pygments.css' | prepend: site.baseurl }}">
